# latent-space

./: .gitignore  .gitmodules  CML.md  LICENSE  README.md  TODO.md  dvc.yaml  install_dev.fish  mlflow.db  out.dvc  pyproject.toml  requirements.txt  run.sh  setup.fish
repos/nested_learning/: CHANGELOG.md  README.md  TODO.md  pyproject.toml  train.py  train_deepspeed.py  train_dist.py  train_fsdp.py
repos/nested_learning/configs/: mid_smoke.yaml  mid_stage2.yaml  mid_stage2_smoke.yaml  mid_titan_baseline.yaml  pilot.yaml  pilot_smoke.yaml
repos/nested_learning/configs/ablations/: cms_sparse.yaml  selfmod_chunked_8_64.yaml  selfmod_momentum_off.yaml  selfmod_momentum_on.yaml  selfmod_no_alpha.yaml  selfmod_no_cms.yaml  selfmod_rank1_precond_off.yaml
repos/nested_learning/configs/data/: continual_segments_sample.yaml  fineweb_edu_longdoc_filtered_sample.yaml  fineweb_edu_mixture_full.yaml  fineweb_edu_mixture_sample.yaml  refinedweb_mixture.yaml  refinedweb_mixture_filtered.yaml  refinedweb_mixture_full.yaml  refinedweb_mixture_sample.yaml
repos/nested_learning/configs/deepspeed/: zero3.json
repos/nested_learning/configs/hope/: mid.yaml  mid_fsdp.yaml  pilot.yaml  pilot_attention.yaml  pilot_selfmod.yaml  pilot_transformer.yaml  target.yaml  target_fsdp.yaml
repos/nested_learning/configs/resolved/: cms_sparse_eval.yaml  phase2_pilot_attention_eval.yaml  phase2_pilot_transformer_eval.yaml
repos/nested_learning/data/filtered/: c4_en_sample.txt  code_en_sample.txt  redpajama_en_sample.txt  wikipedia_en_sample.txt
repos/nested_learning/data/mixtures/: refinedweb_mix_filtered_shards.json  refinedweb_mix_tokenizer_sample.json
repos/nested_learning/docs/: FSDP_SCALING_GUIDE.md  P4_REMEDIATION_PLAN.md  PAPER_COMPLIANCE.md  PHASE2_LONG_CONTEXT_COMPARISON.md  PHASE_2_PLAN.md  compute_plan.md  continual_classification_eval.md  continual_eval.md  data_pipeline.md  env_matrix.md  experiments_report.md  future_directions.md  guide.md  phase2_comparison.md  planner_convo_01.md  release_checklist.md  release_plan.md  scaling_guidance.md  spec_interfaces.md  sprint_next_plan.md  stability_journal.md  stage1_plan.md  stage2_plan.md  stage2_progress.md  zeroshot_eval.md
repos/nested_learning/docs/templates/: checkpoint_report.md
repos/nested_learning/eval/: continual_dummy.json  continual_mid_stage2.json  continual_mid_stage2_smoke.json  continual_mid_stage2_ts10.json  continual_mid_stage2_ts10_single120_clip.json  continual_mid_stage2_ts10_single140_schedC.json  continual_mid_stage2_ts10_single220_schedD.json  continual_mid_stage2_ts10_single80.json  continual_mid_stage2_ts10_single80lr2e5.json  continual_mid_stage2_ts20.json  continual_mid_titan_baseline.json  continual_pilot.json  continual_pilot_cms_nochunk_step5000.json  continual_pilot_cms_sparse_step5000.json  continual_pilot_multi.json  continual_pilot_opt_adamw_step5000.json  continual_pilot_opt_muon_step5000.json  continual_pilot_selfmod_off_step5000.json  continual_pilot_step22000.json  continual_pilot_step230000.json  continual_pilot_teach05_long_step25000.json  continual_pilot_teach05_step2000.json  continual_pilot_teach15_long_step25000.json  continual_pilot_teach15_step2000.json  continual_smoke.json  continual_titan.json  continual_titan_relaunch_step001000.json  continual_titan_step25000.json  niah_dummy.json  niah_mid_stage2.json  niah_mid_stage2_smoke.json  niah_mid_stage2_ts10_single140_schedC.json  niah_mid_stage2_ts10_single220_schedD.json  niah_mid_stage2_ts10_single80lr2e5.json  niah_mid_titan_baseline.json  niah_pilot.json  niah_pilot_cms_nochunk_step5000.json  niah_pilot_cms_sparse_step5000.json  niah_pilot_opt_adamw_step5000.json  niah_pilot_opt_muon_step5000.json  (+47 more)
repos/nested_learning/google_papers/Nested_Learning/: Nested_Learning.json  Nested_Learning.md
repos/nested_learning/google_papers/TITANs/: TITANs.json  TITANs.md
repos/nested_learning/reports/: ablations.md  stage2_smoke.md
repos/nested_learning/scripts/: __init__.py  package_pilot_release.sh  run_cpu_ddp_smoke.sh  run_e2e_smoke.sh  run_smoke.sh
repos/nested_learning/scripts/checkpoint/: verify.py
repos/nested_learning/scripts/checks/: tokenizer_coverage_guard.py
repos/nested_learning/scripts/compute/: create_reservations.sh
repos/nested_learning/scripts/data/: __init__.py  check_tokenizer.py  check_tokenizer_coverage.py  filter_corpus.py  process_mixture.py  run_full.sh  run_sample.sh  shard_corpus.py  train_tokenizer.py  validate_mixture.py
repos/nested_learning/scripts/eval/: __init__.py  compare_variants.py  continual.py  continual_classification.py  niah.py  niah_suite.py  passkey.py  pg19_perplexity.py  phase2_memorization_delta_smoke.py  plot_continual_classification.py  plot_forgetting.py  plot_niah_suite.py  run_pilot_suite.sh  (+2 more)
repos/nested_learning/tests/: test_attention_features.py  test_build_model_from_cfg_selfmod.py  test_cms.py  test_compare_variants_cli.py  test_continual_classification.py  test_data_split_fallbacks.py  test_eval_builders.py  test_hope_block.py  test_hope_selfmod_integration.py  test_levels.py  test_m3.py  test_memorization.py  test_model.py  test_optim.py  test_phase2_memorization_delta.py  test_self_modifying_titans.py  test_selfmod_online.py  test_teach_signal.py  test_variants.py
(+400 files in other folders)
