[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-space"
version = "0.1.0"
description = "Lightly organized ML code I've written or gathered."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rich W." }]
classifiers = [
"Intended Audience :: Science/Research",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
]

# [project.urls]
# "Homepage" = "https://github.com/facebookresearch/sam3"

[project.optional-dependencies]
dev   = ["pytest", "ruff"]
# excel = ["openpyxl>=3.1"]
# plot  = ["matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["latent_space"]
# exclude = ["build*", "scripts*", "examples*", "tests"]
