[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-space"
version = "0.1.0"
description = "Lightly organized ML code I've written or gathered."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rich W." }]
classifiers = [
"Intended Audience :: Science/Research",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mlflow>=3.0",
  "timm>=1.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "tqdm>=4.0",
]

# [project.urls]
# "Homepage" = "https://github.com/facebookresearch/sam3"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
dvc = ["dvc", "dvc-ssh"]
dinov3 = [
  "ftfy",
  "omegaconf",
  "regex",
  "submitit",
  "termcolor",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["latent_space"]
# exclude = ["build*", "scripts*", "examples*", "tests"]
