[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-space"
version = "0.1.0"
description = "Lightly organized ML code I've written or gathered."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rich W." }]
classifiers = [
"Intended Audience :: Science/Research",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "numpy",
  "pandas",
  "pip",
  "opencv-python",
  "matplotlib",
  "scikit-learn",
  "umap-learn",
  "tqdm>=4.0",
  "jupyter",
  "ipykernel",
  "ollama",
  "pacmap",
  "timm>=1.0",
  "einops",
  "numba>=0.57",
  "llvmlite>=0.40",
  "lightning",
  "rich",
  "tensorboard",
  "dvc",
  "dvc-ssh",
  "termcolor",
  "transformers",
  "mlflow>=3.0",
  "nvidia-ml-py",
]

# [project.urls]
# "Homepage" = "https://github.com/facebookresearch/sam3"

[project.optional-dependencies]
dev = ["pytest", "ruff", "python-lsp-server"]
dvc = ["dvc", "dvc-ssh"]
dinov3 = [
  "ftfy",
  "omegaconf",
  "regex",
  "submitit",
  "termcolor",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["latent_space"]
# exclude = ["build*", "scripts*", "examples*", "tests"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
